version/0.9/_sources/examples/00-systemcoupling/index.rst.txt


.. _sphx_glr_examples_00-systemcoupling:

Coupled analysis examples
=========================
These examples show you how you can use System Coupling capabilities from Python to perform
coupled analyses. This includes importing setup data provided by participant solvers, initial
population of the System Coupling datamodel to define the analysis, subsequent modification and
interrogation of the data model, and running the System Coupling solver to perform the analysis.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example illustrates a one-way data transfer from a SCDT file to Fluent, using System Coupling. Fluent solves a simple steady fluid flow problem, where the flow is affected by the momentum sources defined in the SCDT file.">

.. only:: html

  .. image:: /examples/00-systemcoupling/images/thumb/sphx_glr_fluid_swirl_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-systemcoupling_fluid_swirl.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fluid swirl</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This demo illustrates a transient coupled simulation of convection heating of a fluid in a cylindrical tank. The heat source and heating tank are controlled via two FMUs that share temperature and heat flow data with one another.">

.. only:: html

  .. image:: /examples/00-systemcoupling/images/thumb/sphx_glr_heating_tank_fmu_fmu_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-systemcoupling_heating_tank_fmu_fmu.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FMU-FMU cosimulation of a heating tank & heater</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example is a version of the Oscillating Plate case that is often used as a tutorial for System Coupling. This two-way, fluid-structure interaction (FSI) case is based on co-simulation of a transient oscillating plate with surface data transfers.">

.. only:: html

  .. image:: /examples/00-systemcoupling/images/thumb/sphx_glr_oscillating_plate_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-systemcoupling_oscillating_plate.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscillating plate</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example is a version of the Turek-Hron FSI2 case that is often used as a benchmark case for System Coupling. This two-way, fluid-structure interaction (FSI) case is based on co-simulation of a transient oscillating beam with surface data transfers.">

.. only:: html

  .. image:: /examples/00-systemcoupling/images/thumb/sphx_glr_turek_hron_fsi2_thumb.jpg
    :alt:

  :ref:`sphx_glr_examples_00-systemcoupling_turek_hron_fsi2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Turek-Hron FSI2 Benchmark Example</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/00-systemcoupling/fluid_swirl
   /examples/00-systemcoupling/heating_tank_fmu_fmu
   /examples/00-systemcoupling/oscillating_plate
   /examples/00-systemcoupling/turek_hron_fsi2

